--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>HELLOOO</h1>
-    
+    <form id="chat-form">
+        <input type="text" required autocomplete="off" placeholder="Enter Message" id="msg">
+        <input type="submit" value="Send">
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
 </body>
