Ouput sent messages to html

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,9 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
+    <h2>Messages</h2>
+    <div class="chat">
+
+    </div>
 </body>
 </html>
