Make chat autoscroll for new message

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
         <input type="text" required autocomplete="off" placeholder="Enter Message" id="msg">
         <input type="submit" value="Send">
     </form>
+    <h2>Messages</h2>
+    <div class="chat" style="overflow-y:scroll; height:400px; background:lightblue;">
+        
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
-    <h2>Messages</h2>
-    <div class="chat">
-
-    </div>
 </body>
 </html>
