Add logout functionality

--- a/public/talk.html
+++ b/public/talk.html
@@ -12,6 +12,9 @@
         <input type="text" required autocomplete="off" placeholder="Enter Message" id="msg">
         <input type="submit" value="Send">
     </form>
+    <form method="post" action="/logout">
+        <input type="submit" value="Logout">
+    </form>
     <h2>Messages</h2>
     <div class="chat" style="overflow-y:scroll; height:400px; background:lightblue;">
         
